fixed page width still need to fix bottom row wrap into columns

--- a/css/main.css
+++ b/css/main.css
@@ -11,16 +11,22 @@ html {
 
 .row__container {
 	width: 100%;
-	min-width: 1175px;
 	margin: 0 auto;
 	min-height: 50px;
 	display: flex;
 	box-sizing: border-box;
-	padding: 3%;
+	padding: 20px;
 	flex-flow: row wrap;
 
 	/*erase blue border after*/
 	border: 2px solid blue;
+}
+
+@media all and ( max-width: 600px ) {
+		.row__container {
+			width: 100%;
+			display: block;
+		}
 }
 
 .row__header {
@@ -36,28 +42,25 @@ html {
 
 .row__container--header {
 	width: 100%;
-	max-height: 20px;
+	min-height: 20px;
 	box-sizing: border-box;
-	padding: 0%
-	flex-flow: row wrap;
+	padding: 20px;
+	
 	display: flex;
 	justify-content: space-around;
 	border-bottom: 3px solid yellow;
 
-	/*border: 2px solid green;
-	/*flex-basis: inherit;*/
+	/*border: 2px solid green;*/
 
 }
+
 .title__header {
 	min-width: 300px;
-	/*max-height: 50px;*/
 	background-color: black;
 	color: yellow;
 	font-size: 30px;
 	font-family: 'Merriweather', serif;
 	text-decoration: none;
-	/*padding: 20px;
-	/*flex-basis: inherit;*/
 	flex-direction: row wrap;
 	align-self: center;
 	margin-right: auto;
@@ -67,8 +70,8 @@ html {
 } 
 
 .title__header--column {
-	font-size: 1.25rem;
-	font-weight: 600;
+	font-size: 25px;
+	font-weight: 800px;
 	font-family: 'Merriweather', serif;
 	display: flex;
 	align-self: center;
@@ -77,7 +80,6 @@ html {
 .nav__container {
 	min-width: 450px;
 	background-color: black;
-	/*padding: 20px;*/
 	align-self: center;
 	margin-left: auto;
 	flex-direction: row-wrap;
@@ -101,6 +103,12 @@ html {
 	font-family: 'Oswald', sans-serif;
 	font-weight: bold;
 	text-transform: uppercase;
+}
+
+@media all and ( min-width: 400px ) {
+		.nav__button {
+			display: inline-block;
+	}
 }
 
 .tagline {
@@ -130,15 +138,13 @@ html {
 	padding-bottom: 3%;
 	border-top: 1px solid black;
 	border-bottom: 1px solid black;
-	/*display: block;*/
 }
 
 .banner__box {
 	border: 1px solid black;
 	background-color: rgba(255,255,255,.8);
 	padding: 30px;
-	width: 300px;
-	align-self: flex-end;
+	width: 400px;
 	flex-direction: column;
 	min-height: 100px;
 	box-sizing: border-box;
@@ -153,40 +159,59 @@ html {
 	color: black;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 25px;
-	font-weight: 700;
+	font-weight: 800;
 	flex-flow: wrap;
 	align-self: center;
 }
 
 .column {
 	padding: 20px;
-	min-width: 1175px;
-	min-height: 100px
+	width: 100%;
+	min-height: 100px;
 	display: flex;
 	justify-content: center;
-
-
 	box-sizing: border-box;
 	flex-flow: row wrap;
-	/*flex-direction: column;*/
 }
 
+@media all and ( min-width: 400px ) {
+		.column {
+			display: flex;
+			flex-flow: column wrap;
+		}
+	}
+
+
 .column__box {
-	padding: 30px;
-	width: 300px;
+	height: 200px;
 	display: flex;
 	flex-direction: column;
 	max-width: 33%;
-	border-sizing: border-box;
+	box-sizing: border-box;
+	border-right: 1px solid gray;
+	justify-content: center;
 
 	border: 1px solid red;
 }
+
+/*@media all and ( min-width: 400px ) {
+		.column__box {
+			max-width: 100%;
+			display: flex;
+		}
+	}*/
+
+
+.column__box--end {
+	border-right: none;
+}
+
 .column-text {
 	font-family: 'Source Sans Pro', sans-serif;
 	color: black;
-	align-self: center;
 	font-size: 20px;
-	padding: 5px;
+	line-height: 25px;
+	padding: 20px;
 }
  
 .button {
@@ -195,13 +220,11 @@ html {
 	font-weight: bold;
 	background: yellow;
 	color: black;
-	/*display: block;*/
 	text-align: center;
 	padding: 12px;
 	border-radius: 5px;
 	box-shadow: rgba(0, 0, 0, 0.2) 0px -3px 0px 0px inset;
 	text-transform: uppercase;
-	align-self: center;
 }
 
 .button__columns {
@@ -209,13 +232,14 @@ html {
 	text-decoration: none;
 	color: black;
 	font-weight: bold;
-	flex-direction: column;
+	width: 90%;
+	align-self: center;
 	font-family: 'Oswald', sans-serif;
 }
+
 .page-footer {
 	background-color: black;
 	color: white;
-	min-width: 1175px;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 20px;
 }
